--- a/utility/openai_compatibility_guide.ipynb
+++ b/utility/openai_compatibility_guide.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ragondin",
    "language": "python",
    "name": "python3"
   },
